Unit tests + documentation