@@ -18,7 +18,8 @@ import junit.framework.TestCase;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import static org.fest.assertions.api.Assertions.assertThat;
 
@@ -47,12 +48,17 @@ public class DownloadManagerTest extends TestCase {
         mTmpDirPath = System.getProperty("java.io.tmpdir");
     }
 
-    public void testAll() throws IOException {
+    public void testAll() throws IOException, URISyntaxException {
 
-        final String fileName = DownloadUtils.getFileName(new URL(FAIL_URL));
-        final String fileName1 = DownloadUtils.getFileName(new URL(SMALL_FILE_URL1));
-        final String fileName2 = DownloadUtils.getFileName(new URL(SMALL_FILE_URL2));
-        final String fileName3 = DownloadUtils.getFileName(new URL(SMALL_FILE_URL3));
+        final URI uri = new URI(FAIL_URL);
+        final URI uri1 = new URI(SMALL_FILE_URL1);
+        final URI uri2 = new URI(SMALL_FILE_URL2);
+        final URI uri3 = new URI(SMALL_FILE_URL3);
+
+        final String fileName = DownloadUtils.getFileName(uri);
+        final String fileName1 = DownloadUtils.getFileName(uri1);
+        final String fileName2 = DownloadUtils.getFileName(uri2);
+        final String fileName3 = DownloadUtils.getFileName(uri3);
 
         final File outFile = new File(mTmpDirPath, fileName);
         final File outFile1 = new File(mTmpDirPath, fileName1);
@@ -64,22 +70,10 @@ public class DownloadManagerTest extends TestCase {
         assertThat(outFile2).doesNotExist();
         assertThat(outFile3).doesNotExist();
 
-        mDownloadManager.download(SMALL_FILE_URL3);
-        mDownloadManager.download(FAIL_URL);
-        mDownloadManager.download(SMALL_FILE_URL1);
-        mDownloadManager.download(SMALL_FILE_URL2);
-
-        final long startTime = System.currentTimeMillis();
-
-        waitFor(FAIL_URL, startTime, 30000);
-        waitFor(SMALL_FILE_URL1, startTime, 30000);
-        waitFor(SMALL_FILE_URL2, startTime, 30000);
-        waitFor(SMALL_FILE_URL3, startTime, 30000);
-
-        assertThat(mDownloadManager.isDownloaded(FAIL_URL)).isFalse();
-        assertThat(mDownloadManager.isDownloaded(SMALL_FILE_URL1)).isTrue();
-        assertThat(mDownloadManager.isDownloaded(SMALL_FILE_URL2)).isTrue();
-        assertThat(mDownloadManager.isDownloaded(SMALL_FILE_URL3)).isTrue();
+        assertThat(mDownloadManager.download(uri3)).isTrue();
+        assertThat(mDownloadManager.download(uri)).isFalse();
+        assertThat(mDownloadManager.download(uri1)).isTrue();
+        assertThat(mDownloadManager.download(uri2)).isTrue();
 
         assertThat(outFile1).exists();
         assertThat(outFile2).exists();
@@ -87,11 +81,15 @@ public class DownloadManagerTest extends TestCase {
         assertThat(outFile).doesNotExist();
     }
 
-    public void testDownload() throws IOException {
+    public void testDownload() throws IOException, URISyntaxException {
 
-        final String fileName1 = DownloadUtils.getFileName(new URL(SMALL_FILE_URL1));
-        final String fileName2 = DownloadUtils.getFileName(new URL(SMALL_FILE_URL2));
-        final String fileName3 = DownloadUtils.getFileName(new URL(SMALL_FILE_URL3));
+        final URI uri1 = new URI(SMALL_FILE_URL1);
+        final URI uri2 = new URI(SMALL_FILE_URL2);
+        final URI uri3 = new URI(SMALL_FILE_URL3);
+
+        final String fileName1 = DownloadUtils.getFileName(uri1);
+        final String fileName2 = DownloadUtils.getFileName(uri2);
+        final String fileName3 = DownloadUtils.getFileName(uri3);
 
         final File outFile1 = new File(mTmpDirPath, fileName1);
         final File outFile2 = new File(mTmpDirPath, fileName2);
@@ -101,40 +99,26 @@ public class DownloadManagerTest extends TestCase {
         assertThat(outFile2).doesNotExist();
         assertThat(outFile3).doesNotExist();
 
-        mDownloadManager.download(SMALL_FILE_URL1);
-        mDownloadManager.download(SMALL_FILE_URL2);
-        mDownloadManager.download(SMALL_FILE_URL3);
-
-        final long startTime = System.currentTimeMillis();
-
-        waitFor(SMALL_FILE_URL1, startTime, 30000);
-        waitFor(SMALL_FILE_URL2, startTime, 30000);
-        waitFor(SMALL_FILE_URL3, startTime, 30000);
-
-        assertThat(mDownloadManager.isDownloaded(SMALL_FILE_URL1)).isTrue();
-        assertThat(mDownloadManager.isDownloaded(SMALL_FILE_URL2)).isTrue();
-        assertThat(mDownloadManager.isDownloaded(SMALL_FILE_URL3)).isTrue();
+        assertThat(mDownloadManager.download(uri1)).isTrue();
+        assertThat(mDownloadManager.download(uri2)).isTrue();
+        assertThat(mDownloadManager.download(uri3)).isTrue();
 
         assertThat(outFile1).exists();
         assertThat(outFile2).exists();
         assertThat(outFile3).exists();
     }
 
-    public void testFail() throws IOException {
+    public void testFail() throws IOException, URISyntaxException {
 
-        final String fileName = DownloadUtils.getFileName(new URL(FAIL_URL));
+        final URI uri = new URI(FAIL_URL);
+
+        final String fileName = DownloadUtils.getFileName(uri);
 
         final File outFile = new File(mTmpDirPath, fileName);
 
         assertThat(outFile).doesNotExist();
 
-        mDownloadManager.download(FAIL_URL);
-
-        final long startTime = System.currentTimeMillis();
-
-        waitFor(FAIL_URL, startTime, 10000);
-
-        assertThat(mDownloadManager.isDownloaded(FAIL_URL)).isFalse();
+        assertThat(mDownloadManager.download(uri)).isFalse();
 
         assertThat(outFile).doesNotExist();
     }
@@ -151,27 +135,8 @@ public class DownloadManagerTest extends TestCase {
         delete(SMALL_FILE_URL3);
     }
 
-    private boolean delete(final String url) throws MalformedURLException {
+    private boolean delete(final String url) throws MalformedURLException, URISyntaxException {
 
-        return new File(mTmpDirPath, DownloadUtils.getFileName(new URL(url))).delete();
-    }
-
-    private void waitFor(final String url, final long startTime, final long timeoutMs) throws IOException {
-
-        while (!mDownloadManager.isComplete(url)) {
-
-            try {
-
-                Thread.sleep(100);
-
-            } catch (final InterruptedException ignored) {
-
-            }
-
-            if ((System.currentTimeMillis() - startTime) > timeoutMs) {
-
-                throw new IOException();
-            }
-        }
+        return new File(mTmpDirPath, DownloadUtils.getFileName(new URI(url))).delete();
     }
 }
